Clean up minor issues that accumulated over the years.